--- a/FoodShelves.csproj
+++ b/FoodShelves.csproj
@@ -72,6 +72,7 @@
   <None Remove="assets\foodshelves\blocktypes\seedshelf.json" />
   <None Remove="assets\foodshelves\blocktypes\shelves\doubleshelf.json" />
   <None Remove="assets\foodshelves\blocktypes\shelves\glassjarshelf.json" />
+  <None Remove="assets\foodshelves\blocktypes\shelves\pieshelf - Copy.json" />
   <None Remove="assets\foodshelves\blocktypes\shelves\pieshelfattr.json" />
   <None Remove="assets\foodshelves\blocktypes\shelves\shelfshort.json" />
   <None Remove="assets\foodshelves\blocktypes\vegetablebasket.json" />
@@ -86,6 +87,7 @@
   <None Remove="assets\foodshelves\config\restrictions\general\holderuniversal.json" />
   <None Remove="assets\foodshelves\config\restrictions\general\liquidystuff.json" />
   <None Remove="assets\foodshelves\config\restrictions\glassware\meatfreezer.json" />
+  <None Remove="assets\foodshelves\config\restrictions\glassware\seedbins.json" />
   <None Remove="assets\foodshelves\config\restrictions\other\buckethook.json" />
   <None Remove="assets\foodshelves\config\restrictions\other\floursack.json" />
   <None Remove="assets\foodshelves\config\restrictions\shelves\barshelf.json" />
@@ -157,6 +159,7 @@
   <None Remove="assets\foodshelves\shapes\block\glassware\fooddisplaycase.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\GlassJar.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\MeatFreezer.json" />
+  <None Remove="assets\foodshelves\shapes\block\glassware\seedbins.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\wallcabinet.json" />
   <None Remove="assets\foodshelves\shapes\block\other\buckethook.json" />
   <None Remove="assets\foodshelves\shapes\block\other\FlourSack.json" />
@@ -176,6 +179,7 @@
   <None Remove="assets\foodshelves\shapes\util\eggbasketrope.json" />
   <None Remove="assets\foodshelves\shapes\util\FlourSackContentCube.json" />
   <None Remove="assets\foodshelves\shapes\util\GlassJarContentCube.json" />
+  <None Remove="assets\foodshelves\shapes\util\SeedBinsContentCube.json" />
   <None Remove="assets\foodshelves\sounds\block\glasscabinetclose.ogg" />
   <None Remove="assets\foodshelves\sounds\block\glassCabinetOpen.ogg" />
   <None Remove="assets\foodshelves\sounds\block\icedrawerclose.ogg" />
