--- a/FoodShelves.csproj
+++ b/FoodShelves.csproj
@@ -109,6 +109,7 @@
   <None Remove="assets\foodshelves\lang\fr.json" />
   <None Remove="assets\foodshelves\lang\pl.json" />
   <None Remove="assets\foodshelves\lang\pt-br.json" />
+  <None Remove="assets\foodshelves\patches\artofcooking.json" />
   <None Remove="assets\foodshelves\patches\artofgrowing.json" />
   <None Remove="assets\foodshelves\patches\butchering.json" />
   <None Remove="assets\foodshelves\patches\carryon.json" />
@@ -191,8 +192,8 @@
   <None Remove="assets\foodshelves\sounds\block\wallcabinetopen.ogg" />
   <None Remove="assets\foodshelves\textures\block\wood\coolingcabinet\surface_long.png" />
   <None Remove="assets\foodshelves\textures\block\wood\fruitbasket\top.png" />
-  <None Remove="assets\foodshelves\textures\block\wood\horizontalbarrelbig\bottom.png" />
-  <None Remove="assets\foodshelves\textures\block\wood\horizontalbarrelbig\top.png" />
+  <None Remove="assets\foodshelves\textures\block\wood\tun\bottom.png" />
+  <None Remove="assets\foodshelves\textures\block\wood\tun\top.png" />
   <None Remove="assets\foodshelves\textures\block\wood\vegetablebasket\top.png" />
   <None Remove="assets\foodshelves\textures\variants\wood\acacia.png" />
   <None Remove="assets\foodshelves\textures\variants\wood\baldcypress.png" />
